[package]
name = "rust-tetris-sdl"
version = "0.1.0"
authors = ["Andrew Jones <andrew.jones@rea-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-features = false
dev-dependencies = ["sdl2-mixer"]
features = ["ttf", "mixer"]
