[package]
name = "tetris-bane"
version = "0.1.0"
authors = ["Andrew Jones <andy.larrymite@gmail.com>"]
edition = "2018"
description = "A Tetris clone with a deliberately frustrating set of blocks."

[dependencies]
rand = "0.7.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "linux")'.dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf", "mixer"]

[target.'cfg(not(target_os = "linux"))'.dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf", "mixer", "static-link", "use-vcpkg"]

[target.'cfg(not(target_os = "linux"))'.package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf", "sdl2-mixer[libvorbis]"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[target.'cfg(not(target_os = "linux"))'.package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata.bundle]
name = "Tetris Bane"
identifier = "io.github.andii1701.tetris-bane"
icon = ["web/icons/bane_icon.ico"]
category = "public.app-category.puzzle-games"
resources = ["assets"]
short_description = "A Tetris clone with a deliberately frustrating set of blocks."
long_description = """
A Tetris clone with a deliberately frustrating set of blocks. There's also a classic mode for the purists and even a chill mode!
"""
